--- a/Connect Hub/Base.lproj/Main.storyboard
+++ b/Connect Hub/Base.lproj/Main.storyboard
@@ -17,19 +17,22 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="IMG_1385" translatesAutoresizingMaskIntoConstraints="NO" id="On1-u3-Q1c">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="IMG_1337" translatesAutoresizingMaskIntoConstraints="NO" id="On1-u3-Q1c">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a0l-6W-2US">
-                                <rect key="frame" x="141" y="238" width="133" height="69"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="57"/>
-                                <color key="textColor" red="1" green="0.074743433489999997" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a0l-6W-2US">
+                                <rect key="frame" x="72.666666666666657" y="410" width="268.66666666666674" height="76"/>
+                                <fontDescription key="fontDescription" name=".SFNSDisplay" family=".SF NS Display" pointSize="65"/>
+                                <color key="textColor" red="0.0" green="1" blue="0.92779093980789185" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="a0l-6W-2US" firstAttribute="centerX" secondItem="cvd-ow-IOE" secondAttribute="centerX" id="CrX-B9-f7x"/>
+                            <constraint firstItem="a0l-6W-2US" firstAttribute="centerY" secondItem="cvd-ow-IOE" secondAttribute="centerY" id="vjM-fn-t6t"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="0gZ-3g-TfK"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Home" image="home" id="UGx-DD-9Yh"/>
@@ -183,8 +186,11 @@
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eMW-xK-EH9">
-                                        <rect key="frame" x="102" y="224" width="57" height="38"/>
+                                        <rect key="frame" x="97" y="224" width="67" height="38"/>
                                         <color key="backgroundColor" red="0.0" green="1" blue="0.92779093980000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="67" id="3kd-nW-OE9"/>
+                                        </constraints>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="21"/>
                                         <state key="normal" title="Reset">
                                             <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -304,8 +310,11 @@
                                                 </connections>
                                             </pickerView>
                                             <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Uzn-zM-0M8">
-                                                <rect key="frame" x="108.66666666666666" y="291.66666666666663" width="83" height="38"/>
+                                                <rect key="frame" x="103.66666666666666" y="291.66666666666663" width="93" height="38"/>
                                                 <color key="backgroundColor" red="0.0" green="1" blue="0.92779093980000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="93" id="4mE-K0-cXJ"/>
+                                                </constraints>
                                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="21"/>
                                                 <state key="normal" title="Register">
                                                     <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -433,8 +442,11 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9qA-PF-R5u">
-                                                <rect key="frame" x="113.33333333333331" y="173.00000000000006" width="81" height="38"/>
+                                                <rect key="frame" x="108.33333333333331" y="173.00000000000006" width="91" height="38"/>
                                                 <color key="backgroundColor" red="0.0" green="1" blue="0.92779093980000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="91" id="1PS-5B-UeG"/>
+                                                </constraints>
                                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="21"/>
                                                 <state key="normal" title="Let's Go">
                                                     <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -524,24 +536,39 @@
         <!--Location-->
         <scene sceneID="ij5-r1-tVv">
             <objects>
-                <viewController id="Jk2-71-3Ik" customClass="LocationViewController" sceneMemberID="viewController">
+                <viewController id="Jk2-71-3Ik" customClass="LocationViewController" customModule="Connect_Hub" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="bml-vP-4y1">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="IMG_1107" translatesAutoresizingMaskIntoConstraints="NO" id="flt-ok-zaJ" customClass="lo">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="IMG_1337" translatesAutoresizingMaskIntoConstraints="NO" id="flt-ok-zaJ">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" showsUserLocation="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ESK-Th-DKC">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="813"/>
+                                <connections>
+                                    <outlet property="delegate" destination="Jk2-71-3Ik" id="5zT-bh-iSl"/>
+                                </connections>
+                            </mapView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="ESK-Th-DKC" firstAttribute="bottom" secondItem="b5U-lE-vvV" secondAttribute="bottom" id="4wy-vB-bTS"/>
+                            <constraint firstItem="ESK-Th-DKC" firstAttribute="leading" secondItem="b5U-lE-vvV" secondAttribute="leading" id="IRy-V2-vgl"/>
+                            <constraint firstItem="ESK-Th-DKC" firstAttribute="top" secondItem="bml-vP-4y1" secondAttribute="top" id="IbA-lx-zAO"/>
+                            <constraint firstItem="ESK-Th-DKC" firstAttribute="trailing" secondItem="b5U-lE-vvV" secondAttribute="trailing" id="UTd-VL-Rua"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="b5U-lE-vvV"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Location" image="location" id="a0c-wV-5Ko"/>
+                    <connections>
+                        <outlet property="mapView" destination="ESK-Th-DKC" id="QpB-T7-SDh"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZdA-gO-z0s" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1135" y="-658"/>
+            <point key="canvasLocation" x="-1136.231884057971" y="-658.25892857142856"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="mJy-rw-MLW">
@@ -566,9 +593,7 @@
     </scenes>
     <resources>
         <image name="168E3A9E-A9FB-429A-8741-5116FC1B779C" width="1080" height="1920"/>
-        <image name="IMG_1107" width="1082" height="1920"/>
         <image name="IMG_1337" width="1080" height="1920"/>
-        <image name="IMG_1385" width="1080" height="1920"/>
         <image name="home" width="30" height="30"/>
         <image name="location" width="30" height="30"/>
     </resources>
